--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
             max-width: 900px;
             margin-left: auto;
             margin-right: auto;
+            text-align: center;
         }
         
         /* Sections */
@@ -813,7 +814,7 @@
                 margin-bottom: 2rem;
                 padding: 0 0.5rem;
                 max-width: 100%;
-                text-align: left;
+                text-align: center;
             }
 
             /* Mobile Card Optimizations */
