Add canonical link to index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="canonical" href="https://antonyshane.com/" />
     <meta name="google-site-verification" content="bvps54B_yYZGmiQsPngvN719r2ozanlJ6i8JoEqIHU4" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Antony Shane — Cybersecurity Researcher, AI/ML Engineer, Full-Stack Developer</title>
